<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:padding="20dp"
                android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:layout_width="200dp"
                       android:src="@drawable/photo"
                       android:scaleType="fitCenter"
                       android:layout_centerHorizontal="true"
                       android:id="@+id/photo"
                       android:layout_height="200dp"/>
            <TextView android:layout_width="wrap_content"
                      android:textColor="@android:color/darker_gray"
                      android:text="@string/first_name"
                      android:id="@+id/firstNameLabel"
                      android:layout_marginTop="20dp"
                      android:layout_below="@+id/photo"
                      android:textSize="18sp"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:textColor="@android:color/darker_gray"
                      android:text="@string/last_name"
                      android:layout_marginTop="20dp"
                      android:layout_below="@+id/firstName"
                      android:id="@+id/lastNameLabel"
                      android:textSize="18sp"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:textColor="@android:color/darker_gray"
                      android:text="@string/about_me"
                      android:layout_below="@+id/lastName"
                      android:layout_marginTop="20dp"
                      android:id="@+id/aboutMeLabel"
                      android:textSize="18sp"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:textColor="@color/blue_notsotransparent"
                      android:layout_toRightOf="@+id/lastNameLabel"
                      android:layout_marginLeft="20dp"
                      android:layout_marginTop="20dp"
                      android:layout_below="@+id/photo"
                      android:text="Вячеслав"
                      android:id="@+id/firstName"
                      android:textSize="18sp"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:textColor="@color/blue_notsotransparent"
                      android:layout_marginTop="20dp"
                      android:layout_toRightOf="@+id/lastNameLabel"
                      android:layout_marginLeft="20dp"
                      android:id="@+id/lastName"
                      android:text="Солдатов"
                      android:layout_below="@+id/firstName"
                      android:textSize="18sp"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:textColor="@color/blue_notsotransparent"
                      android:id="@+id/aboutMe"
                      android:layout_below="@+id/lastName"
                      android:text="поехали!))))"
                      android:layout_toRightOf="@+id/lastNameLabel"
                      android:layout_marginLeft="20dp"
                      android:layout_marginTop="20dp"
                      android:textSize="18sp"
                      android:layout_height="wrap_content"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>